gcc/testsuite/gcc.dg/20010516-1.c
/* { dg-options "-fshow-column" } */

foo()
{
      char d;
      __asm volatile ( "" :: "m"(&d)); /* { dg-error "34:" "non-lvalue" } */
}
